--- a/kvkk.html
+++ b/kvkk.html
@@ -40,7 +40,7 @@
 			<!--begin::Wrapper-->
 			<div class="bgi-no-repeat bgi-size-contain bgi-position-x-center bgi-position-y-bottom landing-dark-bg">
 				<!--begin::Header-->
-				<div class="landing-navigation-header">
+				<div class="landing-navigation-header d-none d-md-inline">
 					<!--begin::Container-->
 					<div class="container mx-2 md-mx-4">
 						<!--begin::Wrapper-->
@@ -123,35 +123,66 @@
 										<!--begin::Menu item-->
 										<div class="menu-item">
 											<!--begin::Menu link-->
-											<a class="menu-link nav-link active py-3 px-4 px-xxl-6" href="#kt_body"
-												data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">Home</a>
+											<a class="menu-link nav-link active py-3 px-4 px-xxl-6"
+												href="homepage-1.html" data-kt-scroll-toggle="true"
+												data-kt-drawer-dismiss="true">Anasayfa</a>
 											<!--end::Menu link-->
 										</div>
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item">
 											<!--begin::Menu link-->
-											<a class="menu-link nav-link py-3 px-4 px-xxl-6" href="#how-it-works"
-												data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">How it
-												Works</a>
+											<a class="menu-link nav-link py-3 px-4 px-xxl-6" href="education-list.html"
+												data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">Tüm
+												Eğitimler</a>
 											<!--end::Menu link-->
 										</div>
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item">
 											<!--begin::Menu link-->
-											<a class="menu-link nav-link py-3 px-4 px-xxl-6" href="#achievements"
-												data-kt-scroll-toggle="true"
-												data-kt-drawer-dismiss="true">Achievements</a>
+											<a class="menu-link nav-link py-3 px-4 px-xxl-6" href="blog-1.html"
+												data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">Blog</a>
 											<!--end::Menu link-->
 										</div>
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item">
 											<!--begin::Menu link-->
-											<a class="menu-link nav-link py-3 px-4 px-xxl-6" href="#team"
-												data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">Team</a>
+											<a class="menu-link nav-link py-3 px-4 px-xxl-6" href="about-us.html"
+												data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">Biz Kimiz</a>
 											<!--end::Menu link-->
+										</div>
+										<!--end::Menu item-->
+										<!--begin::Menu item-->
+										<div class="menu-item">
+											<!--begin::Menu link-->
+											<a class="menu-link nav-link py-3 px-4 px-xxl-6" href="faq.html"
+												data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">SSS</a>
+											<!--end::Menu link-->
+										</div>
+										<!--end::Menu item-->
+										<!--begin::Menu item-->
+										<div class="menu-item">
+											<!--begin::Menu link-->
+											<a class="menu-link nav-link py-3 px-4 px-xxl-6" href="contact-us.html"
+												data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">İletişim</a>
+											<!--end::Menu link-->
+										</div>
+										<!--end::Menu item-->
+										<!--begin::Menu item-->
+										<div class="menu-item mt-auto mb-10">
+											<!--begin::Language Dropdown-->
+											<label class="form-check-label justify-content-start mb-3" for="language">
+												Dil seçimi:
+											</label>
+											<select class="form-select min-w-100px w-100" name="language">
+												<option value="1" selected="selected">Türkçe</option>
+												<option value="2">İngilizce</option>
+												<option value="3">Almanca</option>
+												<option value="4">Fransızca</option>
+											</select>
+											<!--end::Language Dropdown-->
 										</div>
 										<!--end::Menu item-->
 									</div>
@@ -177,18 +208,34 @@
 							<!--end::Menu wrapper-->
 							<!--begin::Toolbar-->
 							<div class="flex-equal text-end ms-1 d-flex justify-content-end">
-								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center d-none d-md-inline-block"></i>
+								<i
+									class="bi bi-bell-fill fs-4 text-gray-700 align-self-center d-none d-md-inline-block"></i>
 								<i class="bi bi-heart-fill fs-4 text-gray-700 mx-4 lg-mx-8 align-self-center"></i>
 								<a href="sign-in.html"
 									class="btn bg-gray-200 bg-hover-gray-400 fw-bolder me-1 me-lg-4">Giriş Yap</a>
-								<a href="sign-up.html"
-									class="btn btn-danger d-none d-md-inline fw-bolder">
+								<a href="sign-up.html" class="btn btn-danger d-none d-md-inline fw-bolder">
 									Ücretsiz Kaydol
 								</a>
 							</div>
 							<!--end::Toolbar-->
 						</div>
 						<!--end::Wrapper-->
+						<!--begin::Menu wrapper-->
+						<div class="d-flex d-md-none align-items-center mt-1 px-2">
+							<!--begin::Search wrapper-->
+							<div class="position-relative w-100">
+								<i
+									class="ki-duotone ki-magnifier fs-3 text-gray-600 position-absolute top-50 translate-middle ms-6">
+									<span class="path1"></span>
+									<span class="path2"></span>
+								</i>
+								<input type="text"
+									class="form-control form-control-solid bg-white border-gray-400 ps-10 w-full"
+									name="search" value="" placeholder="Eğitim, kurs, kategori ara...." />
+							</div>
+							<!--end::Search wrapper-->
+						</div>
+						<!--end::Menu wrapper-->
 					</div>
 					<!--end::Container-->
 				</div>
