--- a/homepage-1.html
+++ b/homepage-1.html
@@ -31,7 +31,7 @@
 
 <body id="kt_body" data-bs-spy="scroll" data-bs-target="#kt_landing_menu" class="bg-body position-relative app-blank">
 	<!--begin::Theme mode setup on page load-->
-	<script>var defaultThemeMode = "light"; var themeMode; if (document.documentElement) { if (document.documentElement.hasAttribute("data-bs-theme-mode")) { themeMode = document.documentElement.getAttribute("data-bs-theme-mode"); } else { if (localStorage.getItem("data-bs-theme") !== null) { themeMode = localStorage.getItem("data-bs-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-bs-theme", themeMode); }</script>
+	<!-- <script>var defaultThemeMode = "light"; var themeMode; if (document.documentElement) { if (document.documentElement.hasAttribute("data-bs-theme-mode")) { themeMode = document.documentElement.getAttribute("data-bs-theme-mode"); } else { if (localStorage.getItem("data-bs-theme") !== null) { themeMode = localStorage.getItem("data-bs-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-bs-theme", themeMode); }</script> -->
 	<!--end::Theme mode setup on page load-->
 	<!--begin::Root-->
 	<div class="d-flex flex-column flex-root" id="kt_app_root">
@@ -44,9 +44,48 @@
 					<a class="d-flex align-items-center" href="homepage-1.html">
 						<img class="eu-logo" alt="Logo" src="assets/media/logos/eu-logo.svg" />
 					</a>
-					<a class="d-flex align-items-center" href="homepage-1.html">
+					<!-- <a class="d-flex align-items-center" href="homepage-1.html">
 						<img class="top-logo" alt="Logo" src="assets/media/logos/light-logo.svg" />
-					</a>
+					</a>			-->
+					<!--begin::Menu wrapper-->
+					<div class="align-self-center">
+						<!--begin::Toggle-->
+						<button type="button" class="btn btn-secondary rotate" data-kt-menu-trigger="click"
+							data-kt-menu-placement="bottom-start" data-kt-menu-offset="10px, 5px">
+							Languages
+							<span class="svg-icon fs-3 rotate-180 ms-3 me-0">
+								<i class="ki-duotone ki-down"></i>
+							</span>
+						</button>
+						<!--end::Toggle-->
+						<!--begin::Menu-->
+						<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg-light-primary fw-semibold w-auto min-w-200 mw-300px"
+							data-kt-menu="true">
+							<!--begin::Menu item-->
+							<div class="menu-item px-3">
+								<a href="#" class="menu-link px-6">
+									Türkçe
+								</a>
+							</div>
+							<!--end::Menu item-->
+							<!--begin::Menu item-->
+							<div class="menu-item px-3">
+								<a href="#" class="menu-link px-6">
+									İngilizce
+								</a>
+							</div>
+							<!--end::Menu item-->
+							<!--begin::Menu item-->
+							<div class="menu-item px-3">
+								<a href="#" class="menu-link px-6">
+									Almanca
+								</a>
+							</div>
+							<!--end::Menu item-->
+						</div>
+						<!--end::Menu-->
+					</div>
+					<!--end::Dropdown wrapper-->
 				</div>
 				<!--end::Header-->
 			</div>
@@ -185,8 +224,7 @@
 										</div>
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
-										<div class="menu-item mt-auto mb-10">
-											<!--begin::Language Dropdown-->
+										<!-- <div class="menu-item mt-auto mb-10">
 											<label class="form-check-label justify-content-start mb-3" for="language">
 												Dil seçimi:
 											</label>
@@ -196,8 +234,7 @@
 												<option value="3">Almanca</option>
 												<option value="4">Fransızca</option>
 											</select>
-											<!--end::Language Dropdown-->
-										</div>
+										</div> -->
 										<!--end::Menu item-->
 									</div>
 									<!--end::Menu-->
